actually added a cursor this time

--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ table {
 }
 
 html {
-	cursor: url("photos/testcursor_nyJ_icon.ico"), default;
+	cursor: url('photos/testcursor_real.png'),auto;
 }
 
 body {
 	background-image: url(https://www.nasa.gov/wp-content/uploads/2024/11/0302398orig.jpg);
 	color: white;
-	cursor: url("photos/testcursor_nyJ_icon.ico"), default;
+	cursor: url('photos/testcursor_real.png'),auto;
 }
 
 main {
